<resources>
    <string name="app_name">CustomViewLearn</string>
    <string name="material_design">MaterialDesign</string>
    <string name="simple_material_design">SimpleMaterialDesign</string>
    <string name="complex_material_design">ComplexMaterialDesign</string>
    <string name="user_name">UserName</string>
    <string name="password">password</string>
    <string name="fab_btn_info">Info</string>
    <string name="fab_btn_address">Address</string>
    <string name="fab_btn_contact">Contact</string>
    <string name="navigation_view">NavigationView</string>
    <string name="coordinator_view">CoordinatorView</string>
    <string name="collapsing_view">CollapsingView</string>
    <string name="bottom_sheet_behaviors">BottomSheetBehavior</string>
    <string name="behaviors">Behaviors</string>
    <string name="back_top">BackTop</string>
    <string name="swipe_dismiss">SwipeDismiss</string>
    <string name="zhi_hu">ZhiHu</string>
    <string name="canvas_save_restore">CanvasSaveRestore</string>
    <string name="canvas_layer">CanvasLayer</string>
    <string name="canvas">Canvas</string>
    <string name="path">Path</string>
    <string name="scroller">Scroller</string>
    <string name="rule_view">RuleView</string>
    <string name="recursive_view">RecursiveView</string>
    <string name="rotate_clock">RotateClockView</string>
    <string name="canvas_skew">CanvasSkew</string>
    <string name="seek_bar">SeekBar</string>
    <string name="switch_button">SwitchButton</string>
    <string name="arcprogress">ArcProgress</string>
    <string name="content">内容区域</string>
    <string name="primary_page">首页</string>
    <string name="blog">我的博客</string>
    <string name="about">关于</string>
    <string name="material_theme">材料设计主题</string>
    <string name="scale_down_show_behavior">com.lucky.customviewlearn.material.behavior.ScaleDownShowBehavior</string>
    <string name="scale_up_show_behavior">com.lucky.customviewlearn.material.behavior.ScaleUpShowBehavior</string>
    <string name="swipe_dismiss_behavior">android.support.design.widget.SwipeDismissBehavior</string>
    <string-array name="game_money_range">
        <item>"0"</item>
        <item>"1"</item>
        <item>"2"</item>
        <item>"3"</item>
        <item>"4"</item>
    </string-array>
    <string name="nb_scroll_ruler">ScrollRuler</string>
    <string name="signature_view">自定义手写签名</string>
    <string name="signature_pad_view">Pad自定义手写签名</string>
    <string name="border_linearlayout">边框有颜色的线性布局</string>
    <string name="security_check">安全信息检查</string>
    <string name="flexbox_layout">FlexBoxLayout</string>
    <string name="yoga_layout">YogaLayout</string>
    <string name="relative_flex">RelativeFlex</string>
    <string name="dynamic_view_insert">动态插入视图</string>
    <string name="dynamic_view_change">更新ZiRuImageView</string>
    <string name="socket_ipc_client">SocketIPC_Client</string>
    <string name="ruler_view">自定义尺子</string>
</resources>
