<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/user_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_name"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/snack_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="ShowSnackBar" />

            <Button
                android:id="@+id/btn_float_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FloatingActionButton" />
        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|start"
            android:layout_margin="16dp"
            android:src="@android:drawable/ic_dialog_email"
            app:borderWidth="2dp"
            app:fabSize="normal"
            app:rippleColor="#ff0000" />

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/float_menu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            app:menu_animationDelayPerItem="50"
            app:menu_backgroundColor="#ccffffff"
            app:menu_colorNormal="#FFB805"
            app:menu_colorPressed="#F2AB00"
            app:menu_colorRipple="#D99200"
            app:menu_labels_style="@style/MenuButtonsLabel"
            app:menu_shadowColor="#444">

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_info"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_help"
                app:fab_label="@string/fab_btn_info" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_address"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_agenda"
                app:fab_label="@string/fab_btn_address" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/menu_contact"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_compass"
                app:fab_label="@string/fab_btn_contact" />

        </com.github.clans.fab.FloatingActionMenu>
    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>