<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginBottom="20dp"
    tools:context="com.lucky.customviewlearn.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/btn_checkmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CheckMark"
            />

        <Button
            android:id="@+id/btn_customcircle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="CustomCircle"
            />

        <Button
            android:id="@+id/btn_pieview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PieView"
            />

        <Button
            android:id="@+id/btn_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Scroller"
            />

        <Button
            android:id="@+id/btn_scroller_extend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="ExtendScroller"
            />

        <Button
            android:id="@+id/btn_scroller_advanced"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AdvancedScroller"
            />

        <Button
            android:id="@+id/btn_pathview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="PathView"
            />

        <Button
            android:id="@+id/btn_heart_bezier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HeartBezier"
            />

        <Button
            android:id="@+id/btn_event_dispatch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="EventDispatch"
            />

        <Button
            android:id="@+id/btn_taichi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TaiChi"
            />

        <Button
            android:id="@+id/btn_crash"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TestCrash"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/btn_resources"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Resources"
            />

        <Button
            android:id="@+id/btn_material_design"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MaterialDesign"
            />

        <Button
            android:id="@+id/btn_canvas_save_restore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canvas_save_restore"
            />

        <Button
            android:id="@+id/btn_canvas_layer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/canvas_layer"
            />

        <Button
            android:id="@+id/btn_rule_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rule_view"
            />

    </LinearLayout>

</ScrollView>
